--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healing Journeys - Stories & Insights</title>
+    <title>Future Self - Stories & Insights</title>
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
 
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">Healing Journeys</a>
+             <a href="#" class="nav-logo">Future Self</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#testimonial-section" class="nav-link">Stories</a></li>
                 <li class="nav-item"><a href="#insights-section" class="nav-link">Insights</a></li>
@@ -25,13 +25,13 @@
 
         <div id="filter-controls">
             <div class="filter-group">
-                <h4>Filter by Condition:</h4>
+                <h4>Filter by Condition (3+ stories):</h4>
                 <div id="condition-filters" class="filter-buttons">
                     <span class="placeholder">Loading filters...</span>
                 </div>
             </div>
             <div class="filter-group">
-                <h4>Filter by Method:</h4>
+                <h4>Filter by Method (5+ stories):</h4>
                 <div id="method-filters" class="filter-buttons">
                     </div>
             </div>
