--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Self - Stories & Insights</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRDXP452X5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FRDXP452X5');
+    </script>
     </head>
 <body>
 
     <nav class="navbar">
         <div class="nav-container">
-             <a href="#" class="nav-logo">Future Self</a>
+             <a href="#" class="nav-logo">
+                <img src="logo.svg" alt="Future Self Logo" height="40">
+                </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#testimonial-section" class="nav-link">Stories</a></li>
                 <li class="nav-item"><a href="#insights-section" class="nav-link">Insights</a></li>
