--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Future Self</title>
+    <title>About This Project - Future Self</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRDXP452X5"></script>
     <script>
@@ -33,33 +33,24 @@
         </div>
     </nav>
 
-    <main class="content-section about-page" style="max-width: 900px; margin: 40px auto;"> <h1>About Future Self</h1>
+    <main class="content-section about-page" style="max-width: 900px; margin: 40px auto;">
+
+        <h1>About This Project</h1>
 
         <section id="about-project" aria-labelledby="about-heading">
-            <h2 id="about-heading">About This Project</h2>
-
             <h3>From Me:</h3>
-            <p>I built this project as a gift for my 40th birthday—not just to myself, but to a wider circle of people seeking hope and healing.</p>
-            <p>After two years of volunteering and deep personal work inspired by Joe Dispenza’s teachings, I created this site to make those insights easier to access and act on. I drew from my background in data science, voice processing, and a personal need to find light—and offer it.</p>
-            <p>This isn’t a startup. It’s a soul project.</p>
-            <p>If the community finds it useful and I’m able to sustain myself, I’ll keep going—adding deeper insights, heavier data processing, and clearer pathways for patients to reclaim their power. If not, I’ll listen and let it go. Either way, it’s hand-in-hand.</p>
-            <p>If you find value here and want to help fuel the next steps, donations are welcome.</p>
+            <p>This site is a personal offering to the Joe Dispenza community, born from my own healing journey and two years volunteering. It's a gift for my 40th, built using data science and voice processing to make testimonial insights easier to find and use.</p>
+            <p>Consider this a 'soul project'. If it proves valuable and community support makes it feasible, I plan to expand it with deeper analysis and tools. If not, I'll adapt based on feedback.</p>
+            <p>Donations are welcome if you find this resource helpful and want to support its future development.</p>
 
-            <h3>The Process (What I Did):</h3>
-            <ol>
-                <li><strong>Starting Point: Raw Data Collection</strong><br>
-                    Began with a raw dataset (<code>final_db.json</code>) containing 320 testimonials, likely from Dr. Joe Dispenza’s YouTube videos. Included fields like title, url, conditions, and methods.</li>
-                <li><strong>Voice Processing and Data Refinement</strong><br>
-                    Processed audio from videos to extract spoken content. Identified key phrases for <code>hope_driven_quotes</code>. Added <code>overall_mean_sentiment</code> and <code>sentiment_hope_score</code> using NLP models. Extracted <code>method_outcomes</code> and <code>most_inspiring_moment</code>.</li>
-                <li><strong>Voice Tag Generation</strong><br>
-                    Derived <code>voice_tags</code> (e.g., "🌿 Calm", "🔥 Intense") from vocal tone, pacing, or emotion using audio analysis (prosody) and potentially manual curation to add an emotional layer to stories.</li>
-                <li><strong>Data Normalization and Clustering</strong><br>
-                    Cleaned up condition/method names using fuzzy matching (e.g., "thyroid issues" + "hypothyroidism" → "thyroid condition"). Reduced ~260 conditions to ~180 and ~118 methods to ~60. Initially clustered conditions and methods, later simplifying for the final database.</li>
-                <li><strong>Evolution to Final DB</strong><br>
-                    Combined raw data, voice-derived fields, normalized data, and clustering results into the cleaned <code>final_db_clustered_tagged_cleaned.json</code> used by this site. Flattened condition clusters into a simple array.</li>
-                <li><strong>Facts Generation (<code>facts.json</code>)</strong><br>
-                    Analyzed testimonials for aggregate stats (e.g., remission rates), extracted relevant quotes, suggested actions, and added tags to create the curated "Healing Insights" rotated on the site.</li>
-            </ol>
+            <h3>The Process Behind the Scenes:</h3>
+             <ul>
+                <li><strong>Gathering Stories:</strong> It started by collecting over 300 publicly shared video testimonials from the community.</li>
+                <li><strong>Listening Deeply:</strong> The audio from these videos was carefully processed to capture not just the words, but also key inspirational quotes, significant healing moments, and the overall sentiment being expressed.</li>
+                <li><strong>Adding Emotional Context:</strong> Descriptive "Voice Tags" (like 🌿 Calm or 🔥 Intense) were added based on analyzing the speaker's vocal tone and energy, helping to convey the feeling behind the story.</li>
+                <li><strong>Organizing the Data:</strong> Testimonials often mention conditions or methods using varied language. This data was cleaned and organized, grouping similar terms (e.g., different ways of describing anxiety or specific meditation types) to make searching and filtering more effective and intuitive.</li>
+                <li><strong>Distilling Insights:</strong> The entire collection was analyzed to identify recurring themes, patterns, and statistics, which are shared in the "Healing Insights" section.</li>
+            </ul>
         </section>
 
         <hr style="border-color: rgba(255, 255, 255, 0.1); margin: 40px 0;"> <section id="understanding-site" aria-labelledby="understanding-heading">
@@ -68,16 +59,10 @@
             <h3>Voice Tags (e.g., 🌿 Calm, 🔥 Intense)</h3>
             <p>These tags attempt to capture the speaker's vocal delivery style during the testimonial. They are derived automatically from analyzing the audio's tone, speed, and emotional cues, sometimes refined manually. They add an extra layer to help you connect with the feeling behind the story.</p>
 
-            <h3>Sentiment Scores</h3>
-            <p>You might see references to sentiment scores in the underlying data description. These were calculated using Natural Language Processing (NLP) models to get a general sense of the positivity (<code>overall_mean_sentiment</code>) and hopefulness (<code>sentiment_hope_score</code>) expressed in the testimonial transcripts.</p>
-
-            <h3>Data Cleaning & Normalization</h3>
-            <p>Conditions and methods mentioned in testimonials can be described in many ways. Efforts were made to group similar terms (like "hypothyroidism" and "thyroid issues" into "thyroid condition") using automated techniques (fuzzy matching) to make filtering more effective.</p>
-
             <h3>Healing Insights</h3>
             <p>The insights shown are derived from analyzing trends and specific statements across multiple testimonials in the dataset, combined with relevant quotes and suggested actions.</p>
 
-            <p><em>Note: This project involves interpretation and automated analysis. While efforts were made for accuracy, always refer to original sources and consult healthcare professionals for medical advice.</em></p>
+            <p><em>Please note: This site is currently an MVP (Minimum Viable Product). Features and data analysis will evolve based on community feedback and support. Always consult healthcare professionals for medical advice.</em></p>
         </section>
 
     </main>
@@ -91,4 +76,3 @@
 
 </body>
 </html>
-
