--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <footer class="site-footer">
         <p>© 2025 Future Self</p>
         <p class="footer-links">
-            <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a>
+            <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a>
             </p>
     </footer>
 
