--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <footer class="site-footer">
         <p class="footer-links">
-            <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a>
+            <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a>
             </p>
     </footer>
 
