--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
                  <li class="nav-item"><a href="index.html#testimonial-section" class="nav-link">Stories</a></li>
                 <li class="nav-item"><a href="index.html#insights-section" class="nav-link">Insights</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                 <li class="nav-item"><a href="https://forms.gle/fxrWSSNjG5sMyhdU9" target="_blank" rel="noopener noreferrer" class="nav-link">Feedback</a></li>
                  <li class="nav-item">
                     <a href="http://revolut.me/yonatahf89" target="_blank" rel="noopener noreferrer" class="nav-link donate-button">
                         🌿 Support This Project
@@ -44,8 +45,7 @@
             <p>Donations are welcome if you find this resource helpful and want to support its future development.</p>
 
             <h3>The Process Behind the Scenes:</h3>
-             <ul>
-                <li><strong>Gathering Stories:</strong> It started by collecting over 300 publicly shared video testimonials from the community.</li>
+             <ul> <li><strong>Gathering Stories:</strong> It started by collecting over 300 publicly shared video testimonials from the community.</li>
                 <li><strong>Listening Deeply:</strong> The audio from these videos was carefully processed to capture not just the words, but also key inspirational quotes, significant healing moments, and the overall sentiment being expressed.</li>
                 <li><strong>Adding Emotional Context:</strong> Descriptive "Voice Tags" (like 🌿 Calm or 🔥 Intense) were added based on analyzing the speaker's vocal tone and energy, helping to convey the feeling behind the story.</li>
                 <li><strong>Organizing the Data:</strong> Testimonials often mention conditions or methods using varied language. This data was cleaned and organized, grouping similar terms (e.g., different ways of describing anxiety or specific meditation types) to make searching and filtering more effective and intuitive.</li>
@@ -68,11 +68,18 @@
     </main>
 
     <footer class="site-footer">
-        <p>© 2025 Future Self</p>
-        <p class="footer-links">
+         <p class="footer-links">
             <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a>
             </p>
     </footer>
 
+     <div id="cookieConsentBanner" class="cookie-consent-banner">
+        <p>
+            This website uses cookies (specifically Google Analytics) to analyze traffic and improve your experience. By continuing to use this site, you acknowledge this use. Learn more in our <a href="privacy.html">Privacy Policy</a>.
+            <button id="cookieConsentAccept" class="cookie-accept-btn">Got it!</button>
+        </p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
